--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "1.0.0",
   "description": "React hook to get prices of crypto in USDT from Binance API.",
   "main": "index.ts",
-  "scripts": {
-    "start": "react-scripts start"
-  },
   "author": "Rui Santiago",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sainthiago/react-crypto-price"
+  },
+  "scripts": {
+    "build": "tsc && npm run build:js",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
     "@types/react": "^18.0.18",
     "react": "^18.2.0",
     "typescript": "^4.8.2"
