--- a/package.json
+++ b/package.json
@@ -2,33 +2,80 @@
   "name": "react-crypto-price",
   "version": "1.0.0",
   "description": "React hook to get prices of crypto in USDT from Binance API.",
-  "main": "index.ts",
   "author": "Rui Santiago",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/sainthiago/react-crypto-price"
   },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist",
+    "public"
+  ],
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc && npm run build:js",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
+    "build": "npm run clean && rollup -c --environment production",
+    "build:tsc": "tsc",
+    "clean": "rm -rf dist",
+    "start": "rollup -c -w",
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist/"
+    ]
+  },
+  "peerDependencies": {
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.13.15",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-inline-dotenv": "^1.6.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "babel-plugin-transform-node-env-inline": "^0.4.3",
-    "@types/react": "^18.0.18",
+    "@testing-library/react-hooks": "^3.4.1",
+    "@types/jest": "^26.0.7",
+    "@types/react": "^16.3.13",
+    "@types/react-dom": "^16.0.5",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "jest": "^26.1.0",
     "react": "^18.2.0",
+    "react-dom": "^16.12.0",
+    "react-test-renderer": "^16.13.1",
+    "rollup": "^2.79.0",
+    "rollup-plugin-sass": "^1.2.13",
+    "rollup-plugin-typescript2": "^0.33.0",
+    "rollup-plugin-uglify": "^6.0.4",
+    "ts-jest": "^26.1.3",
     "typescript": "^4.8.2"
   },
+  "keywords": [
+    "react",
+    "crypto",
+    "crypo prices",
+    "binance",
+    "hook"
+  ],
   "dependencies": {
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.4.0",
+    "@rollup/plugin-url": "^7.0.0",
+    "prop-types": "^15.7.2",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-summary": "^1.4.3",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
