--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,26 @@
 {
-    "include": ["./src/**/*"],
-    "exclude": ["node_modules"],
-    "files": ["src/index.ts"],
-    "compilerOptions": {
-      "outDir": "lib",
-      "noImplicitThis": false,
-      "module": "commonjs",
-      "target": "es6",
-      "moduleResolution": "node",
-      "alwaysStrict": true,
-      "preserveSymlinks": true,
-      "forceConsistentCasingInFileNames": true,
-      "noFallthroughCasesInSwitch": true,
-      "types": ["jest"],
-      "lib": ["es2015", "esnext", "dom"],
-      "sourceMap": true,
-      "declaration": true,
-      "experimentalDecorators": true,
-      "noImplicitReturns": true,
-      "pretty": true,
-      "strict": true,
-      "baseUrl": ".",
-      "esModuleInterop": true,
-      "skipDefaultLibCheck": false
-    }
-  }
-  
+  "compilerOptions": {
+    "outDir": "dist",
+    "module": "esnext",
+    "target": "es5",
+    "lib": ["es6", "dom", "es2016", "es2017"],
+    "sourceMap": true,
+    "allowJs": false,
+    "jsx": "react",
+    "declaration": true,
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "esModuleInterop": true,
+    "strict": true
+  },
+  "include": ["src"],
+  "files": ["src/index.ts"],
+  "exclude": ["node_modules", "dist", "example", "rollup.config.js"]
+}
